compiler/internal/frontend/testdata/parser/positive/ui.tetra
state CounterState:
    var count: Int = 0

view CounterView(state: CounterState):
    bind value: Int = state.count
    event click -> increment
    command increment:
        state.count = state.count + 1
    accessibility label: String = "Increment"
