compiler/internal/frontend/testdata/parser/negative/ui.tetra
state S:
    var count: Int = 0

view Broken(state: S):
    bind value: Int = state.count
